[UPD] added header

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
+    <header class="ui basic segment center aligned">
+        <div class="ui container">
+            <img src="#" class="ui small image" alt="gakkle logo">
+            <div class="ui pointing secondary menu">
+                <a class="active item">Главная</a>
+                <div class="right menu">
+                    <a class="item">User</a>
+                </div>
+            </div>
+        </div>
+    </header>
     <div class="ui wide container">
         <!-- Filters -->
         <div class="ui two column stackable grid">
@@ -189,7 +200,7 @@
         
     </div>
 
-    <a class="circular ui icon button massive secondary add-button" href="/datasets/add/">
+    <a class="circular ui icon button massive secondary add-button" href="#">
         <i class="icon plus"></i>
     </a>
 
