[UPD] changed heade according to template

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -10,12 +10,12 @@
 <body>
     <header class="ui basic segment center aligned">
         <div class="ui container">
-            <img src="#" class="ui small image" alt="gakkle logo">
-            <div class="ui pointing secondary menu">
-                <a class="active item">Главная</a>
-                <div class="right menu">
-                    <a class="item">User</a>
-                </div>
+            <h1 class="logo">
+                <i class="ui icon crow"></i>Gakkle
+            </h1>
+            <div class="ui secondary pointing menu">
+                <a class="header active item">Главная</a>
+                <a class="header right item" href="#">Пользователь</a>
             </div>
         </div>
     </header>
