[UPD] removed name sorting

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -27,17 +27,11 @@
                 <div class="ui segment">
                     <div class="ui form">
                         <div class="inline fields">
-                            <div class="twelve wide field">
+                            <div class="sixteen wide field">
                                 <div class="ui icon input">
                                     <input type="text" placeholder="Поиск по названию датасета" id="name-filter">
                                     <i class="search icon"></i>
                                 </div>
-                            </div>
-                            <div class="field">
-                                <select class="ui dropdown" id="name-sort">
-                                    <option>По возрастанию</option>
-                                    <option>По убыванию</option>
-                                </select>
                             </div>
                         </div>
                     </div>
