--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -181,9 +181,41 @@
         </div>
     
         <div class="ui three cards cards-container">
-            <a class="ui card" href="#">
+            <a class="ui card" href="#" data-name="Example 7">
+                <div class="content">
+                    <div class="header">Example 7</div>
+                    <div class="description">Delete me</div>
+                    <br>
+                    <div class="description">csv, 22423 кбайт</div>
+                </div>
+            </a>
+            <a class="ui card" href="#" data-name="Example 1">
                 <div class="content">
                     <div class="header">Example 1</div>
+                    <div class="description">Delete me</div>
+                    <br>
+                    <div class="description">csv, 22423 кбайт</div>
+                </div>
+            </a>
+            <a class="ui card" href="#" data-name="Example 2">
+                <div class="content">
+                    <div class="header">Example 2</div>
+                    <div class="description">Delete me</div>
+                    <br>
+                    <div class="description">csv, 22423 кбайт</div>
+                </div>
+            </a>
+            <a class="ui card" href="#" data-name="Example 3">
+                <div class="content">
+                    <div class="header">Example 3</div>
+                    <div class="description">Delete me</div>
+                    <br>
+                    <div class="description">csv, 22423 кбайт</div>
+                </div>
+            </a>
+            <a class="ui card" href="#" data-name="Another example">
+                <div class="content">
+                    <div class="header">Another example</div>
                     <div class="description">Delete me</div>
                     <br>
                     <div class="description">csv, 22423 кбайт</div>
@@ -200,5 +232,6 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.3/dist/semantic.min.js"></script>
+<script src="../static/scripts/filter.js"></script>
 </body>
 </html>
