[ADD] Create filter by row size

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -56,8 +56,9 @@
                             </div>
                             <div class="field">
                                 <select class="ui dropdown" id="row-size-sort">
-                                    <option>По возрастанию</option>
-                                    <option>По убыванию</option>
+                                    <option value="">-</option>
+                                    <option value="row-size_asc">По возрастанию</option>
+                                    <option value="row-size_desc">По убыванию</option>
                                 </select>
                             </div>
                         </div>
@@ -83,8 +84,9 @@
                             </div>
                             <div class="field">
                                 <select class="ui dropdown" id="data-size-sort">
-                                    <option value="asc">По возрастанию</option>
-                                    <option value="desc">По убыванию</option>
+                                    <option value="">-</option>
+                                    <option value="size_asc">По возрастанию</option>
+                                    <option value="size_desc">По убыванию</option>
                                 </select>
                             </div>
                         </div>
@@ -181,15 +183,15 @@
         </div>
     
         <div class="ui three cards cards-container">
-            <a class="ui card" href="#" data-name="Example 7" data-size="11">
+            <a class="ui card" href="#" data-name="Example 7" data-size="22" data-row-size="111">
                 <div class="content">
                     <div class="header">Example 7</div>
                     <div class="description">Delete me</div>
                     <br>
-                    <div class="description">csv, 11 кбайт</div>
+                    <div class="description">csv, 22 кбайт</div>
                 </div>
             </a>
-            <a class="ui card" href="#" data-name="Example 1" data-size="22">
+            <a class="ui card" href="#" data-name="Example 1" data-size="22" data-row-size="222">
                 <div class="content">
                     <div class="header">Example 1</div>
                     <div class="description">Delete me</div>
@@ -197,7 +199,7 @@
                     <div class="description">csv, 22 кбайт</div>
                 </div>
             </a>
-            <a class="ui card" href="#" data-name="Example 2" data-size="33">
+            <a class="ui card" href="#" data-name="Example 2" data-size="33" data-row-size="333">
                 <div class="content">
                     <div class="header">Example 2</div>
                     <div class="description">Delete me</div>
@@ -205,7 +207,7 @@
                     <div class="description">csv, 33 кбайт</div>
                 </div>
             </a>
-            <a class="ui card" href="#" data-name="Example 3" data-size="44">
+            <a class="ui card" href="#" data-name="Example 3" data-size="44" data-row-size="444">
                 <div class="content">
                     <div class="header">Example 3</div>
                     <div class="description">Delete me</div>
@@ -213,7 +215,7 @@
                     <div class="description">csv, 44 кбайт</div>
                 </div>
             </a>
-            <a class="ui card" href="#" data-name="Another" data-size="55">
+            <a class="ui card" href="#" data-name="Another" data-size="55" data-row-size="555">
                 <div class="content">
                     <div class="header">Another</div>
                     <div class="description">Delete me</div>
