--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -112,8 +112,9 @@
                             </div>
                             <div class="field">
                                 <select class="ui dropdown" id="downloads-sort">
-                                    <option>По возрастанию</option>
-                                    <option>По убыванию</option>
+                                    <option value="">-</option>
+                                    <option value="downloads_asc">По возрастанию</option>
+                                    <option value="downloads_desc">По убыванию</option>
                                 </select>
                             </div>
                         </div>
@@ -184,7 +185,7 @@
         </div>
     
         <div class="ui three cards cards-container">
-            <a class="ui card" href="#" data-name="Example 7" data-size="22" data-row-size="111" data-views="5000">
+            <a class="ui card" href="#" data-name="Example 7" data-size="22" data-row-size="111" data-views="5000" data-downloads="5000">
                 <div class="content">
                     <div class="header">Example 7</div>
                     <div class="description">Delete me</div>
@@ -192,7 +193,7 @@
                     <div class="description">csv, 22 кбайт</div>
                 </div>
             </a>
-            <a class="ui card" href="#" data-name="Example 1" data-size="22" data-row-size="222" data-views="4000">
+            <a class="ui card" href="#" data-name="Example 1" data-size="22" data-row-size="222" data-views="4000" data-downloads="4000">
                 <div class="content">
                     <div class="header">Example 1</div>
                     <div class="description">Delete me</div>
@@ -200,7 +201,7 @@
                     <div class="description">csv, 22 кбайт</div>
                 </div>
             </a>
-            <a class="ui card" href="#" data-name="Example 2" data-size="33" data-row-size="333" data-views="3000">
+            <a class="ui card" href="#" data-name="Example 2" data-size="33" data-row-size="333" data-views="3000" data-downloads="3000">
                 <div class="content">
                     <div class="header">Example 2</div>
                     <div class="description">Delete me</div>
@@ -208,7 +209,7 @@
                     <div class="description">csv, 33 кбайт</div>
                 </div>
             </a>
-            <a class="ui card" href="#" data-name="Example 3" data-size="44" data-row-size="444" data-views="2000">
+            <a class="ui card" href="#" data-name="Example 3" data-size="44" data-row-size="444" data-views="2000" data-downloads="2000">
                 <div class="content">
                     <div class="header">Example 3</div>
                     <div class="description">Delete me</div>
@@ -216,7 +217,7 @@
                     <div class="description">csv, 44 кбайт</div>
                 </div>
             </a>
-            <a class="ui card" href="#" data-name="Another" data-size="55" data-row-size="555" data-views="1000">
+            <a class="ui card" href="#" data-name="Another" data-size="55" data-row-size="555" data-views="1000" data-downloads="1000">
                 <div class="content">
                     <div class="header">Another</div>
                     <div class="description">Delete me</div>
