--- a/app/templates/one_dataset.html
+++ b/app/templates/one_dataset.html
@@ -20,13 +20,25 @@
                 {% endif %}
             </div>
         </div>
+
+
         <div class="column">
             <div class="ui segment">
                 <div class="ui header">Характеристики</div>
                 <ul>
+                    <li>Автор: <b>{{ dataset_info.dataset_author }}</b></li>
                     <li>Размер файла: {{ dataset_info.dataset_size }} кбайт</li>
                     <li>Количество столбцов: {{ dataset_info.dataset_columns }}</li>
                     <li>Количество записей: {{ dataset_info.dataset_rows }}</li>
+                    <li>Дата создания: {{ dataset_info.dataset_creation_date }}</li>
+                    <li>Текущая версия: {{ dataset_info.dataset_version }}</li>
+
+                    {% if dataset_info.last_editor != '' and dataset_info.last_editor %}
+                    <li>Последний редактор: {{ dataset_info.last_editor }}</li>
+                    {% endif %}
+                    {% if dataset_info.dataset_last_update %}
+                    <li>Последнее обновление: {{ dataset_info.dataset_last_update }}</li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
