--- a/app/templates/add_dataset.html
+++ b/app/templates/add_dataset.html
@@ -11,16 +11,16 @@
     <form class="ui form large" id="dataset-form" autocomplete="off">
         <div class="required field">
             <label>Название</label>
-            <input type="text" name="dataset-name" placeholder="Введите название датасета" maxlength="50" required>
+            <input type="text" name="name" placeholder="Введите название датасета" maxlength="50" required>
         </div>
         <div class="field">
             <label>Описание</label>
-            <textarea name="dataset-description" maxlength="250" placeholder="Введите описание датасета"></textarea>
+            <textarea name="description" maxlength="250" placeholder="Введите описание датасета"></textarea>
         </div>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.2/dist/semantic.min.css">
 
         <div class="ui container" style="padding: 20px">
-            <input type="file" id="csvUpload" accept=".csv" hidden>
+            <input type="file" name="dataset" id="csvUpload" accept=".csv" hidden>
             <label for="csvUpload" class="ui huge fluid primary button">
             <i class="file csv outline icon"></i>
             Загрузить csv файл
@@ -36,5 +36,5 @@
 
 {% block extra %}
 
-<!--<script src="{{ url_for('static', filename='scripts/addDatasetScript.js') }}"></script>-->
+<script src="{{ url_for('static', filename='addDatasetScript.js') }}"></script>
 {% endblock %}
