[REF] add labels reference for input

--- a/app/templates/add_dataset.html
+++ b/app/templates/add_dataset.html
@@ -10,12 +10,12 @@
 <div class="ui text container padded-container">
     <form class="ui form large" id="dataset-form" autocomplete="off">
         <div class="required field">
-            <label>Название</label>
-            <input type="text" name="name" placeholder="Введите название датасета" maxlength="50" required>
+            <label for="name">Название</label>
+            <input type="text" id="name" name="name" placeholder="Введите название датасета" maxlength="50" required>
         </div>
         <div class="field">
-            <label>Описание</label>
-            <textarea name="description" maxlength="250" placeholder="Введите описание датасета"></textarea>
+            <label for="desc">Описание</label>
+            <textarea id="desc" name="description" maxlength="250" placeholder="Введите описание датасета"></textarea>
         </div>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.2/dist/semantic.min.css">
 
