[REF] change js main scripts name

--- a/app/templates/add_dataset.html
+++ b/app/templates/add_dataset.html
@@ -36,5 +36,5 @@
 
 {% block extra %}
 
-<script src="{{ url_for('static', filename='addDatasetScript.js') }}"></script>
+<script src="{{ url_for('static', filename='datasetScripts.js') }}"></script>
 {% endblock %}
