--- a/app/templates/one_dataset.html
+++ b/app/templates/one_dataset.html
@@ -89,6 +89,6 @@
     </div>
 </div>
 
-<script src="{{ url_for('static', filename='viewDataset.js') }}"></script>
+<script src="{{ url_for('static', filename='datasetScripts.js') }}"></script>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 {% endblock %}
