[UPD] change front add dataset

--- a/app/templates/add_dataset.html
+++ b/app/templates/add_dataset.html
@@ -28,7 +28,9 @@
         </div>
     </form>
     <div class="ui container padded-container">
-        <button class="ui secondary button" form="dataset-form">Сохранить</button>
+        <button class="ui secondary button" form="dataset-form" onclick="addDataset()">
+            Сохранить
+        </button>
         <a class="ui button right floated" href="/datasets/">Отмена</a>
     </div>
 </div>
